# Datatransmission

./: .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTE.md  FLAGS_FOR_CLIENT.md  FLAGS_FOR_HOST.md  FLAGS_FOR_RECEIVER.md  FLAGS_FOR_SERVER.md  LICENSE.txt  README.md  build.bat  install_packages.bat
.github/workflows/: codeql.yml
Client/: CMakeLists.txt
Client/src/: client.cpp  client.h  main.cpp
Client/src/gui/: CMakeLists.txt  config.h  main.cpp  password.cpp  password.h  save_load_file.cpp  save_load_file.h  state.cpp  state.h  structs.h  style.cpp  style.h
Host/: CMakeLists.txt
Host/src/: helper.cpp  helper.h  main.cpp  server.cpp  server.h
Host/src/scripts/: CheckIfOpen.bat  OpenFirewallPort.bat  move_startup.bat  remove_startup.bat
Receiver/: CMakeLists.txt
Receiver/src/: client.cpp  client.h  main.cpp
Server/: CMakeLists.txt
Server/src/: helper.cpp  helper.h  main.cpp  server.cpp  server.h
Server/src/scripts/: CheckIfOpen.bat  OpenFirewallPort.bat  move_startup.bat  remove_startup.bat
include/: lz4_comp.h
include/imgui/examples/example_android_opengl3/: CMakeLists.txt
include/imgui/examples/example_glfw_wgpu/: CMakeLists.txt
include/imgui/examples/example_win32_opengl3/: main.cpp
tests/: CMakeLists.txt
tests/Client/gui/state/: test_state.cc
